@@ -48,6 +48,8 @@ Core and builtins
 Library
 -------
 
+- Issue #3116 and #1792:  Fix quadratic behavior in marshal.dumps().
+
 - Issue #2682: ctypes callback functions no longer contain a cyclic
   reference to themselves.
 
